--- a/src/app/components/molecules/tableRow/tableRow.component.scss
+++ b/src/app/components/molecules/tableRow/tableRow.component.scss
@@ -13,6 +13,7 @@
     &.state-cell {
       text-align: center;
       vertical-align: middle;
+      width: 128px;
     }
 
     &.action-cell {
@@ -25,6 +26,7 @@
       padding-right: 10rem;
       text-align: left;
       vertical-align: middle;
+      width: 128px;
     }
 
     &.divider-cell {
